--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Download CLI
+        shell: pwsh
+        run: ./scripts/download-cli.ps1
+
       - uses: actions/download-artifact@v3
         with:
           name: Android-sdk
