--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,13 +80,13 @@ jobs:
 
       - uses: actions/download-artifact@v3
         with:
-          name: Win64-crashpad-sdk
-          path: plugin-dev/Source/ThirdParty/Win64-Crashpad
+          name: Win64-Crashpad-sdk
+          path: plugin-dev/Source/ThirdParty/Win64/Crashpad
 
       - uses: actions/download-artifact@v3
         with:
-          name: Win64-breakpad-sdk
-          path: plugin-dev/Source/ThirdParty/Win64-Breakpad
+          name: Win64-Breakpad-sdk
+          path: plugin-dev/Source/ThirdParty/Win64/Breakpad
 
       - name: Prepare Sentry packages for release
         shell: pwsh
