--- a/plugin-dev/Config/FilterPlugin.ini
+++ b/plugin-dev/Config/FilterPlugin.ini
@@ -7,4 +7,7 @@
 ;    /Extras/...
 ;    /Binaries/ThirdParty/*.dll
 /Scripts/*
+/Binaries/Linux/*
+/Binaries/Mac/*
+/Binaries/Win64/*
 /sentry-cli.properties
