--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,7 +132,7 @@ jobs:
       fail-fast: false
       matrix:
         # Note: these versions must match scripts/packaging/engine-versions.txt
-        unreal: ['5.1', '5.2', '5.3']
+        unreal: ['4.27', '5.0', '5.1', '5.2', '5.3']
         app: ['sample']
 
     steps:
