--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,13 +33,13 @@ jobs:
     uses: ./.github/workflows/sdk.yml
     with:
       target: Win64-Crashpad
-      runsOn: windows-latest
+      runsOn: windows-2019
 
   windows-breakpad-sdk:
     uses: ./.github/workflows/sdk.yml
     with:
       target: Win64-Breakpad
-      runsOn: windows-latest
+      runsOn: windows-2019
 
   build:
     needs: [android-sdk, ios-sdk, macos-sdk, linux-sdk, windows-crashpad-sdk, windows-breakpad-sdk]
