--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -242,7 +242,7 @@ jobs:
         uses: actions/upload-artifact@v3.1.1
         with:
           name: Linux-intermediates-engine${{ matrix.unreal }}
-          path: /workspace/checkout/${{ matrix.app }}/Plugins/sentry/dist/Intermediate/Build/Linux          
+          path: /workspace/checkout/${{ matrix.app }}/Plugins/sentry/dist/HostProject/Intermediate/Build/Linux          
 
       - name: Build & package ${{ matrix.app }}
         # Unreal 5.0 takes ~1 hour to build+package the app so only do it on v4.27
@@ -262,3 +262,44 @@ jobs:
             checkout/${{ matrix.app }}/Saved/Stats
             checkout/${{ matrix.app }}/Saved/MaterialStats
             checkout/${{ matrix.app }}/Saved/MaterialStatsDebug
+
+  marketplace-repack:
+    needs: [test]
+    name: Re-pack for UE Marketplace
+    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        # Note: these versions must match scripts/packaging/engine-versions.txt
+        unreal: ['5.1', '5.2', '5.3']
+
+    steps:
+      - name: Download packages
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ github.sha }}
+
+      - name: Extract packages
+        run: unzip sentry-unreal-*-engine${{ matrix.unreal }}-marketplace.zip -d sentry-unreal-*-engine${{ matrix.unreal }}-marketplace
+
+      - name: Download Linux intermediates
+        uses: actions/download-artifact@v3
+        with:
+          name: Linux-intermediates-engine${{ matrix.unreal }}
+
+      - name: Extract Linux intermediates
+        run: unzip sentry-unreal-*-engine${{ matrix.unreal }}-marketplace.zip -d sentry-unreal-*-engine${{ matrix.unreal }}-marketplace/LinuxIntermediate
+
+      - name: Prepare Sentry packages for release
+        shell: pwsh
+        run: zip -r -1 -v sentry-unreal-*-engine${{ matrix.unreal }}-marketplace.zip ./*
+
+      - name: Re-upload package
+        uses: actions/upload-artifact@v3.1.1
+        with:
+          # Artifact name is the commit sha. Which is what craft uses to find the relevant artifact.
+          name: ${{ github.sha }}
+          if-no-files-found: error
+          path: |
+            sentry-unreal-*-engine${{ matrix.unreal }}-marketplace.zip
