--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -237,6 +237,7 @@ jobs:
         id: pre-compile-linux
         run: |
           docker exec -w /workspace/checkout/${{ matrix.app }}/Plugins/sentry unreal ue4 package -TargetPlatforms=Linux -NoHostPlatform
+          docker exec -w /workspace/checkout/${{ matrix.app }}/Plugins/sentry ls -al /dist
 
       - name: Upload Linux intermediates
         uses: actions/upload-artifact@v3.1.1
