--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -236,7 +236,7 @@ jobs:
       - name: Pre-compile Linux intermediates
         id: pre-compile-linux
         run: |
-          docker exec -w /workspace/checkout/${{ matrix.app }}/Plugins/sentry unreal ue4 package -TargetPlatforms=Linux -NoHostPlatform
+          docker exec -w /workspace/checkout/${{ matrix.app }}/Plugins/sentry unreal ue4 package -TargetPlatforms=Linux
           docker exec -w /workspace/checkout/${{ matrix.app }}/Plugins/sentry unreal ls -al /dist
 
       - name: Upload Linux intermediates
