Add LinuxIntermediate dir to plugin's persisten content

--- a/plugin-dev/Config/FilterPlugin.ini
+++ b/plugin-dev/Config/FilterPlugin.ini
@@ -7,7 +7,5 @@
 ;    /Extras/...
 ;    /Binaries/ThirdParty/*.dll
 /Scripts/*
-/Binaries/Linux/*
-/Binaries/Mac/*
-/Binaries/Win64/*
+/LinuxIntermediate/*
 /sentry-cli.properties
