Update copyright notice

--- a/sample/Config/DefaultGame.ini
+++ b/sample/Config/DefaultGame.ini
@@ -4,7 +4,7 @@ ProjectID=43BDA2D249F2ED19D80A1AB1A40BBE80
 Homepage="https://sentry.io/"
 CompanyName=Sentry
 CompanyDistinguishedName=Sentry Inc.
-CopyrightNotice="// Copyright (c) 2023 Sentry. All Rights Reserved."
+CopyrightNotice=Copyright (c) 2024 Sentry. All Rights Reserved.
 ProjectName=SentryDemo
 Description=Demo project for Sentry UE plugin
 SupportContact="https://help.sentry.io/"
