pinning to macos-13

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,14 +12,14 @@ jobs:
   ios-sdk:
     uses: ./.github/workflows/sdk.yml
     with:
-      target: IOS
-      runsOn: macos-latest
+      target: iOS
+      runsOn: macos-13
 
   macos-sdk:
     uses: ./.github/workflows/sdk.yml
     with:
-      target: Mac
-      runsOn: macos-latest
+      target: macOS
+      runsOn: macos-13
 
   linux-sdk:
     uses: ./.github/workflows/sdk.yml
