--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,10 +145,14 @@ jobs:
           sudo time rm -rf /usr/local/lib/android
           sudo time rm -rf /usr/share/dotnet
           sudo time rm -rf /usr/share/swift
+          sudo time rm -rf /usr/local/share/powershell
           sudo time rm -rf /usr/local/.ghcup
           sudo time rm -rf /usr/local/lib/node_modules
+          sudo time rm -rf /usr/local/share/boost
           sudo time rm -rf /usr/lib/google-cloud-sdk
+          sudo time rm -rf /usr/lib/jvm
           sudo time rm -rf /opt/pipx
+          sudo time rm -rf /opt/ghc
           sudo time rm -rf "$AGENT_TOOLSDIRECTORY"
           sudo time apt-get clean
           sudo time rm -rf /var/lib/apt/lists/*
