--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,12 @@ jobs:
       # See discussion in https://github.com/getsentry/sentry-unreal/pull/173
       runsOn: ubuntu-20.04
 
+  linux-arm64-sdk:
+    uses: ./.github/workflows/sdk.yml
+    with:
+      target: LinuxArm64
+      runsOn: ubuntu-20.04
+
   windows-crashpad-sdk:
     uses: ./.github/workflows/sdk.yml
     with:
@@ -77,6 +83,11 @@ jobs:
         with:
           name: Linux-sdk
           path: plugin-dev/Source/ThirdParty/Linux
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: LinuxArm64-sdk
+          path: plugin-dev/Source/ThirdParty/LinuxArm64
 
       - uses: actions/download-artifact@v3
         with:
@@ -261,7 +272,7 @@ jobs:
         run: |
           docker exec -w /workspace/checkout/${{ matrix.app }} unreal ue4 package
           docker exec -w /workspace/checkout/${{ matrix.app }} unreal cp -r '/home/gh/Library/Logs/Unreal Engine/LocalBuildLogs' Saved/Logs
-  
+
       - name: Collect ${{ matrix.app }} build info
         if: contains(fromJson('["success", "failure"]'), steps.package-app.outcome)
         uses: actions/upload-artifact@v3.1.1
