--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -47,7 +47,7 @@ jobs:
         if: ${{ inputs.target == 'Linux' && steps.cache.outputs.cache-hit != 'true' }}
         run: |
           sudo apt-get update
-          sudo apt-get install zlib1g-dev libcurl4-openssl-dev clang-12 libc++-dev
+          sudo apt-get install zlib1g-dev libcurl4-openssl-dev clang-16 libc++-dev libc++abi-dev
 
       - uses: actions/setup-java@v3
         if: ${{ inputs.target == 'Android' }}
