--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       target: Linux
       # Build for an older GLIBC so that it can run with the old GLIBC included in EpicGames' Unreal docker images.
       # See discussion in https://github.com/getsentry/sentry-unreal/pull/173
-      runsOn: ubuntu-20.04
+      runsOn: ubuntu-latest
 
   windows-crashpad-sdk:
     uses: ./.github/workflows/sdk.yml
