--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -47,7 +47,11 @@ jobs:
         if: ${{ inputs.target == 'Linux' && steps.cache.outputs.cache-hit != 'true' }}
         run: |
           sudo apt-get update
-          sudo apt-get install zlib1g-dev libcurl4-openssl-dev clang libc++-dev
+          sudo apt-get install zlib1g-dev libcurl4-openssl-dev
+          wget https://apt.llvm.org/llvm.sh
+          chmod +x llvm.sh
+          sudo ./llvm.sh 16
+          sudo apt install libc++-16-dev libc++abi-16-dev
 
       - uses: actions/setup-java@v3
         if: ${{ inputs.target == 'Android' }}
