--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -51,7 +51,7 @@ jobs:
           wget https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
           sudo ./llvm.sh 16
-          sudo apt install libc++-16-dev libc++abi-16-dev
+          sudo apt install libc++-16-dev
 
       - uses: actions/setup-java@v3
         if: ${{ inputs.target == 'Android' }}
