--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,10 +200,11 @@ jobs:
       - name: Setup C++ runtime
         run: docker exec --user root unreal bash -c '
           apt-get update ;
+          apt-get install -y wget ;
           wget https://apt.llvm.org/llvm.sh ;
           chmod +x llvm.sh ;
           ./llvm.sh 16 ;
-          apt install libc++-16-dev libc++abi-16-dev '
+          apt-get install libc++-16-dev libc++abi-16-dev '
 
       - name: Download package
         uses: actions/download-artifact@v4
