--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -204,7 +204,7 @@ jobs:
           wget https://apt.llvm.org/llvm.sh ;
           chmod +x llvm.sh ;
           ./llvm.sh 16 ;
-          apt-get install libc++-16-dev libc++abi-16-dev '
+          apt-get install -y libc++-16-dev libc++abi-16-dev '
 
       - name: Download package
         uses: actions/download-artifact@v4
