--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -169,6 +169,7 @@ jobs:
           gid=1000     # the ue4 group in the docker container
           user='gh'
           set -x
+          cat /etc/passwd
           docker network create --ipv6 --subnet 2001:0DB8::/112 ip6net
           docker run -td \
             --name unreal \
@@ -180,7 +181,7 @@ jobs:
             ghcr.io/epicgames/unreal-engine:dev-slim-${{ matrix.unreal }}.1
           docker logout ghcr.io
           # Add the user so it has a home directory (needed for the pip cache later on)
-          docker exec --user root unreal useradd --non-unique -u $uid -g $gid --create-home $user
+          docker exec --user root unreal useradd -u $uid -g $gid --create-home $user
           # Ensure CA certs are in the right directory (needed for running tests)
           docker exec --user root unreal bash -c "
             mkdir -p /etc/pki/tls/certs ;
@@ -192,7 +193,7 @@ jobs:
             chown -R $uid /home/ue4/UnrealEngine/Engine/Binaries/ThirdParty/DotNet "
 
       - name: Setup UE CLI
-        run: docker exec --user root unreal bash -c '
+        run: docker exec unreal bash -c '
           pip3 install --upgrade pip ;
           pip3 install -Iv ue4cli==0.0.54 ;
           ue4 setroot /home/ue4/UnrealEngine '
@@ -221,8 +222,8 @@ jobs:
       - name: Run tests
         id: run-tests
         run: |
-          docker exec --user root -w /workspace/checkout/${{ matrix.app }} unreal ue4 build
-          docker exec --user root -w /workspace/checkout/${{ matrix.app }} unreal ue4 editor \
+          docker exec -w /workspace/checkout/${{ matrix.app }} unreal ue4 build
+          docker exec -w /workspace/checkout/${{ matrix.app }} unreal ue4 editor \
             /workspace/checkout/${{ matrix.app }}/SentryPlayground.uproject \
             -ReportExportPath=/workspace/checkout/${{ matrix.app }}/Saved/Automation \
             -ExecCmds="Automation RunTests Sentry;quit" \
@@ -245,7 +246,7 @@ jobs:
         if: ${{ matrix.unreal == '4.27'}}
         id: package-app
         run: |
-          docker exec --user root -w /workspace/checkout/${{ matrix.app }} unreal ue4 package
+          docker exec -w /workspace/checkout/${{ matrix.app }} unreal ue4 package
           docker exec -w /workspace/checkout/${{ matrix.app }} unreal cp -r '/home/gh/Library/Logs/Unreal Engine/LocalBuildLogs' Saved/Logs
   
       - name: Collect ${{ matrix.app }} build info
