--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -160,12 +160,21 @@ jobs:
           # time du --max-depth=3 --threshold=100M -h /usr /opt /var 2>/dev/null | sort -hr
           df -h
 
+      - name: Modify current user UID
+        run: |
+          echo "Current user and UID:"
+          id          
+          echo "Modifying UID..."
+          sudo usermod -u 1001 $USER      
+          echo "Updated user and UID:"
+          id
+          echo "Fixing ownership of user's files..."
+          sudo find /home/$USER -user $(id -u) -exec chown -h $USER:$USER {} \;
+
       - name: Start Docker container
         run: |
           echo ${{ secrets.DOCKER_TOKEN }} | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           # We start the container with the user ID of the parent GH action user to avoid permission issues on volume.
-          sudo useradd -m -u 1001 -g 1000 ghrunner
-          sudo -u ghrunner bash
           # For UE 5.4 we have to enable ipv6 to fix container startup issues. See https://github.com/adamrehn/ue4-docker/issues/357
           uid=$(id -u) # the GH action user ID
           gid=1000     # the ue4 group in the docker container
