--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,7 @@ jobs:
     uses: ./.github/workflows/sdk.yml
     with:
       target: Linux
-      # Build for an older GLIBC so that it can run with the old GLIBC included in EpicGames' Unreal docker images.
-      # See discussion in https://github.com/getsentry/sentry-unreal/pull/173
-      runsOn: ubuntu-20.04
+      runsOn: ubuntu-latest
 
   windows-crashpad-sdk:
     uses: ./.github/workflows/sdk.yml
