--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -49,7 +49,7 @@ jobs:
           sudo apt-get update
           wget https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
-          ./llvm.sh 16
+          sudo ./llvm.sh 16
           sudo apt-get install libc++-16-dev libc++abi-16-dev 
           sudo apt-get install zlib1g-dev libcurl4-openssl-dev
 
